// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication flux Should authenticate user with valid credentials 1`] = `
Object {
  "data": Object {
    "userLogin": Object {
      "id": "355f43f3-17ee-4ceb-b7a0-1b952dfe4fd4",
      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjM1NWY0M2YzLTE3ZWUtNGNlYi1iN2EwLTFiOTUyZGZlNGZkNCIsImlhdCI6MTYyMzY0ODQ5MCwiZXhwIjoxNjIzNzM0ODkwfQ.79KB_u5Lx2xPksi8AlDGiiSf_9NfpTTYfvsnZfV45_k",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should confirm user account 1`] = `
Object {
  "data": Object {
    "userConfirmAccount": Object {
      "email": "teste@email.com",
      "id": "66a1e77c-f010-4ad0-9ac5-a39b30304ee0",
      "isVerified": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should generate reset token 1`] = `
Object {
  "data": Object {
    "userForgotPassword": Object {
      "id": "a3dc1c0e-2ba0-4247-855c-80bae8739597",
      "passwordResetToken": "1f8fcb22bb87639ae6e08dcf643c666e59cf4096",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should register user and generate emailConfirmationToken 1`] = `
Object {
  "data": Object {
    "userRegister": Object {
      "email": "kowesor320@vvaa1.com",
      "emailConfirmationToken": "3efd2770d799156b106e5431cb676a115b078d33",
      "firstName": "mytest",
      "id": "7bc7d46b-7250-4409-9c5e-8e8ddc9fdf52",
      "lastName": "lastnametest",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication flux Should reset user password 1`] = `
Object {
  "data": Object {
    "userResetPassword": Object {
      "email": "teste@email.com",
      "id": "6f7bdb99-d642-4452-b492-b5cd66e0f072",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
